--- a/app/src/app/menu/menu.component.css
+++ b/app/src/app/menu/menu.component.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -107,113 +106,11 @@ body {
   .color1{
     color: white;
   }
-=======
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: white;
-}
-.menu {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  padding: 15px 15px 0px 15px;
-  background-color: #001030;
-  font-size: 20px;
-  display: grid;
-  grid-template-columns: 33.33% 33.33% 33.33%;
-  z-index: 1;
-}
-.content {
-  display: grid;
-  grid-template-columns: auto;
-  grid-gap: 10px;
-  background-color: white;
-  padding: 10px;
-}
-.content>div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  font-size: 30px;
-}
-.drop,
-.sub,
-.clr,
-.down {
-  border: 0.5px solid;
-  cursor: pointer;
-  font-size: medium;
-  padding: 2px 5px 3px 5px;
-  background-color: rgb(247, 222, 169);
-  color: black;
-}
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  padding: 5px 5px 5px 5px;
-  color: black;
-}
-.dropdown-content input {
-  color: black;
-  padding: 5px 5px 5px 5px;
-  text-decoration: none;
-  display: block-inline;
-}
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-#close,
-#open {
-  position: fixed;
-  right: 0px;
-  top: 0px;
-  z-index: 10;
-  cursor: pointer;
-  color: black;
-}
 
-.btn-block {
-  display: block;
-  width: 50%;
-}
-
-.btn-group-sm>.btn, .btn-sm {
-  padding: .25rem .5rem;
-  font-size: .875rem;
-  line-height: 1;
-  border-radius: .2rem;
-  
-}
-
-.btn {
-  display: inline-block;
-  font-weight: 200;
-  text-align: center;
-  vertical-align: middle;
-  user-select: none;
-  background-color: white;
-  border: transparent;
-  color: black;
-  
-}
-
-.btn:hover{
-
-  cursor: pointer;
-  background-color: antiquewhite;
-}
-
-.color1{
-  color: white;
-}
->>>>>>> c3d0a3e3434dabc6be365775a7ea155c07fd1db3
+  li{
+    background-color: #fff;
+    color: #15568f;;
+    width: 200px;
+    padding-left: 3px;
+    padding-right: 3px;
+  }
