--- a/app/src/app/menu/menu.component.css
+++ b/app/src/app/menu/menu.component.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
+    
   }
   .menu {
     position: -webkit-sticky;
@@ -110,16 +111,19 @@ body {
   .selectv{
     background-color: #fff;
     color: #15568f;;
-    width: 200px;
-    padding-left: 3px;
-    padding-right: 3px;
+    width: 250px;
+    padding: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;  
+    
   }
 
   ul li {
     border: 1px solid #ddd;
     margin-top: -1px; /* Prevent double borders */
     background-color: #f6f6f6;
-    padding: 12px;
+    padding: 20px;
     text-decoration: none;
     font-size: 18px;
     color: black;
