--- a/app/src/app/menu/menu.component.css
+++ b/app/src/app/menu/menu.component.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-    
+
   }
   .menu {
     position: -webkit-sticky;
@@ -12,7 +12,7 @@ body {
     background-color: #001030;
     font-size: 20px;
     display: grid;
-    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-template-columns: 15% 55% 30%;
     z-index: 1;
   }
   .content {
@@ -115,25 +115,25 @@ body {
     padding: 20px;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;  
-    
+    text-overflow: ellipsis;
+
   }
 
   ul li {
     border: 1px solid #ddd;
     margin-top: -1px; /* Prevent double borders */
     background-color: #f6f6f6;
-    padding: 20px;
+    padding: 2px;
     text-decoration: none;
     font-size: 18px;
     color: black;
-    display: block;
-    position: relative;
+    /* display: block;
+    position: relative; */
   }
 
   .close {
     cursor: pointer;
-    
+
   }
-  
+
   .close:hover {background: white;}
