extract noOfWorkers and queryMixes from data

--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -26,7 +26,7 @@
 
           <!-- your code here -->
 
-          <label class="btn btn-sm" style="height: 20px; margin-left: 0px" onClick="">Submit</label>
+          <label class="btn btn-sm" style="height: 20px; margin-left: 0px" (click)="onSubmit()">Submit</label>
           <label class="btn btn-sm" style="height: 20px; margin-left: 150px; " onClick="">Clear all</label>
         </div>
       </div>
