--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -26,18 +26,24 @@
           <button mat-button [matMenuTriggerFor]="xaxis" id="xAxisVal" style="width: 180px; border-radius: 4px; height: 30px; background-color: white;">Select X-axis</button>
           <mat-menu #xaxis="matMenu">
             <button mat-menu-item [matMenuTriggerFor]="noofclient">No. of Clients</button>
-            <button mat-menu-item [matMenuTriggerFor]="queryId">Query ID</button>
-            <button mat-menu-item [matMenuTriggerFor]="result_size">Result Size</button>
+            <button mat-menu-item [matMenuTriggerFor]="qid">Query ID</button>
+            <button mat-menu-item [matMenuTriggerFor]="rsize">Result Size</button>
           </mat-menu>
           <mat-menu #noofclient="matMenu" xPosition="before">
-            <button mat-menu-item *ngFor="let list of listOfWorkers">{{list}}</button>   
+            <button mat-menu-item *ngFor="let client of noOfClients">{{client}}</button>
           </mat-menu>
-          
+          <mat-menu #qid="matMenu" xPosition="before">
+            <button mat-menu-item *ngFor="let query of queryId">{{query}}</button>
+          </mat-menu>
+          <mat-menu #rsize="matMenu" xPosition="before">
+            <button mat-menu-item *ngFor="let result of result_size">{{result}}</button>
+          </mat-menu>
+
           &nbsp;&nbsp;
-          
-          <button mat-button [matMenuTriggerFor]="" id="yAxisVal" style="width: 180px; border-radius: 4px; height: 30px; background-color: white;">
+
+          <button mat-button id="yAxisVal" style="width: 180px; border-radius: 4px; height: 30px; background-color: white;">
             Select Y-axis</button>
-     
+
           <div>
             <button mat-button [matMenuTriggerFor]="selectgraph" id="graphVal" style="border-radius: 4px; height: 30px; width: 380px; margin-top: 20px; background-color: white;">
               Select Graph</button>
@@ -46,15 +52,15 @@
                 <button mat-menu-item style="width: 380px">Area Chart</button>
                 <button mat-menu-item style="width: 380px">Line Chart</button>
                 <button mat-menu-item style="width: 380px">Box Plot</button>
-                <button mat-menu-item style="width: 380px">Scatter Pot</button>  
+                <button mat-menu-item style="width: 380px">Scatter Pot</button>
               </mat-menu>
           </div>
 
-          
+
           <div>
               <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 180px; font-weight:inherit" (click)="onSubmit()">Submit</button>
               &nbsp;&nbsp;&nbsp;&nbsp;
-              <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 180px; font-weight:inherit" onClick="">Clear all</button>  
+              <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 180px; font-weight:inherit" onClick="">Clear all</button>
           </div>
         </div>
       </div>
