--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -25,7 +25,8 @@
         </div>
         <div class="col-6" style=" display:inline-block;">
 
-          <select mat-button id="xAxisVal" style="width: 180px; border-radius: 4px; height: 30px; background-color: white; font-size: 15px;">
+          <select mat-button id="xAxisVal" (change)="xAxisSelected($event.target.value)"
+          style="width: 180px; border-radius: 4px; height: 30px; background-color: white; font-size: 15px;">
             <option value="Select X-axis" selected>Select X-axis</option>
             <optgroup class= "" label= "No. of Clients" style="font-size: 12px;">
               <option *ngFor="let client of noOfClients" >{{client}}</option>
@@ -37,16 +38,24 @@
               <option *ngFor="let result of result_size">{{result}}</option>
             </optgroup>
           </select>
-          
+
 
           &nbsp;&nbsp;
 
-          <select mat-button id="yAxisVal" style="width: 180px; border-radius: 4px; height: 30px; background-color: white; font-size: 15px;">
+          <select mat-button id="yAxisVal" (change)="yAxisSelected($event.target.value)"
+          style="width: 180px; border-radius: 4px; height: 30px; background-color: white; font-size: 15px;">
             <option value="Select Y-axis" selected>Select Y-axis</option>
+            <optgroup class= "" label= "Aggregated" style="font-size: 12px;">
+              <option *ngFor="let yaxis of aggregated" >{{yaxis}}</option>
+            </optgroup>
+            <optgroup class= "" label= "Non-aggregated" style="font-size: 12px;">
+              <option *ngFor="let yaxis of nonAggregated">{{yaxis}}</option>
+            </optgroup>
           </select>
 
           <div>
-            <select mat-button id="graphVal" style="border-radius: 4px; height: 30px; width: 380px; margin-top: 20px; background-color: white; font-size: 15px;">
+            <select mat-button id="graphVal" (change)="graphSelected($event.target.value)"
+            style="border-radius: 4px; height: 30px; width: 380px; margin-top: 20px; background-color: white; font-size: 15px;">
               <option value="Select Graph" style="left:100px " selected>Select Graph</option>
               <option style="font-size: 12px;">Area-Chart</option>
               <option  style="font-size: 12px;">Bar-Cahrt</option>
@@ -54,14 +63,14 @@
               <option  style="font-size: 12px;">Box-Plot</option>
               <option  style="font-size: 12px;">Scatter-Plot</option>
             </select>
-              
+
           </div>
 
 
           <div>
-              <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 180px; font-weight:inherit" (click)="onSubmit()">Submit</button>
+              <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 175px; font-weight:inherit" (click)="onSubmit()">Submit</button>
               &nbsp;&nbsp;&nbsp;&nbsp;
-              <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 180px; font-weight:inherit" onClick="">Clear all</button>
+              <button class="btn btn-sm" style="height: 26px; margin-top: 30px; width: 175px; font-weight:inherit" onClick="">Clear all</button>
           </div>
         </div>
       </div>
