added line graph and area graph to display data

--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -62,7 +62,7 @@
             style="border-radius: 4px; height: 30px; width: 380px; margin-top: 20px; background-color: white; font-size: 15px;">
               <option value="Select Graph" style="left:100px " selected>Select Graph</option>
               <option style="font-size: 12px;">Area-Chart</option>
-              <option  style="font-size: 12px;">Bar-Cahrt</option>
+              <option  style="font-size: 12px;">Bar-Chart</option>
               <option  style="font-size: 12px;">Line-Chart</option>
               <option  style="font-size: 12px;">Box-Plot</option>
               <option  style="font-size: 12px;">Scatter-Plot</option>
@@ -111,4 +111,4 @@
         </table>
       </div>
   </div>
-  <div id="chart" style="margin:50px auto;"></div>
+  <div id="chart" style="margin:30px 200px;"></div>
