--- a/app/src/app/menu/menu.component.css
+++ b/app/src/app/menu/menu.component.css
@@ -111,7 +111,7 @@ body {
 
   .selectv{
     background-color: #fff;
-    color: #15568f;;
+    color: #15568f;
     width: 250px;
     padding: 20px;
     white-space: nowrap;
@@ -162,4 +162,13 @@ body {
 
   }
 
-  .close:hover {background: white;}
+.close:hover {background: white;}
+
+#sidemenu { 
+    float:left;  
+    background-color:  #001030 ;
+    width:15%; 
+    height:76%; 
+} 
+
+
