implementing the slider to get the min and max value

--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -111,6 +111,7 @@
    </tr>  
     <div class="col-2" style="height: 25%">
      <ng5-slider class="slider" [(value)]="verticalSlider1.value" [options]="verticalSlider1.options"></ng5-slider>
+     <button (click)="getSliderMinMax()">Check</button>
     </div>
-    <button (click)="getSliderMinMax()">Click</button>
+    
   </div>
