--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -83,7 +83,6 @@
       <div class="menu-2" style="padding-left: 20px;">
         <table style=" padding: 10px 10px 10px 10px;">
           <tr style="height: 80px">
-
           </tr>
 
           <tr>
@@ -105,7 +104,7 @@
       </div>
     </div>
 
-  <div id="sidemenu">
+  <div *ngIf="displaySideMenu" id="sidemenu">
     <div class="col-2" style="height: 250px; padding: 50px;">
       <label style="color: aliceblue; font-size: large;">Result Size:</label>
      <ng5-slider class="slider" [(value)]="value" [(highValue)]="highValue" [options]="options" (valueChange)="onChangeSlider()"></ng5-slider>
