--- a/app/src/app/menu/menu.component.css
+++ b/app/src/app/menu/menu.component.css
@@ -1,8 +1,13 @@
+html, body {
+  margin: 0;
+  height: 100vh;
+  overflow: hidden;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-
   }
   .menu {
     position: -webkit-sticky;
@@ -194,5 +199,4 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #707070;
 }
-
 
