--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -37,9 +37,6 @@
             <optgroup class= "" label= "Query-Id" style="font-size: 12px;">
               <option *ngFor="let query of queryId">{{query}}</option>
             </optgroup>
-            <optgroup label= Result-Size style="font-size: 12px;">
-              <option *ngFor="let result of result_size">{{result}}</option>
-            </optgroup>
           </select>
 
 
@@ -49,10 +46,7 @@
           style="width: 180px; border-radius: 4px; height: 30px; background-color: white; font-size: 15px;">
             <option value="Select Y-axis" selected>Select Y-axis</option>
             <optgroup class= "" label= "Aggregated" style="font-size: 12px;">
-              <option *ngFor="let yaxis of metrices | slice:0:5" >{{yaxis}}</option>
-            </optgroup>
-            <optgroup class= "" label= "Non-aggregated" style="font-size: 12px;">
-              <option *ngFor="let yaxis of metrices | slice:5">{{yaxis}}</option>
+              <option *ngFor="let yaxis of metrices" >{{yaxis}}</option>
             </optgroup>
           </select>
 
@@ -63,7 +57,6 @@
               <option style="font-size: 12px;">Area-Chart</option>
               <option  style="font-size: 12px;">Bar-Chart</option>
               <option  style="font-size: 12px;">Line-Chart</option>
-              <option  style="font-size: 12px;">Box-Plot</option>
               <option  style="font-size: 12px;">Scatter-Plot</option>
             </select>
 
@@ -82,7 +75,7 @@
 
       <div class="menu-2" style="padding-left: 20px;">
         <table style=" padding: 10px 10px 10px 10px;">
-          <tr style="height: 80px">
+          <tr style="height: 0px">
           </tr>
 
           <tr>
@@ -92,22 +85,23 @@
                 <label class="btn btn-sm" style="font-weight:inherit" onclick="">CSV Format</label>
             </td>
           </tr>
-
-          <tr>
-            <td>
-              <a href="#" class="btn btn-sm" style="font-weight:inherit" id="login-button">Login</a>
-              &nbsp;&nbsp;
-              <a href="#" class="btn btn-sm" style="font-weight:inherit" id="signup-button">Signup</a>
-            </td>
-          </tr>
         </table>
       </div>
     </div>
 
   <div *ngIf="displaySideMenu" id="sidemenu">
-    <div class="col-2" style="height: 250px; padding: 50px;">
-      <label style="color: aliceblue; font-size: large;">Result Size:</label>
-     <ng5-slider class="slider" [(value)]="value" [(highValue)]="highValue" [options]="options" (valueChange)="onChangeSlider()"></ng5-slider>
+    <div style="margin-top: 40px; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+      <label style="color: aliceblue; font-size: medium; margin-left: -30px;">Result Size:</label>
+      <ng5-slider class="slider" [(value)]="value" [(highValue)]="highValue" [options]="options" (valueChange)="onChangeSlider()"></ng5-slider>
+      <div *ngIf="disPlayScatterPlot" style="margin-top: 40px;">
+        <label style="color: aliceblue; font-size: medium; margin-left: -20px;">Change x-axis:</label>
+        <form class="color1">
+          <input class="rad" type="radio" value="clients" name="rad" (click)="scatterPlot('noOfClients')" checked>No. of Clients<br>
+          <input class="rad" type="radio" value="result" name="rad" (click)="scatterPlot('resultSize')">Result Size<br>
+          <input class="rad" type="radio" value="time" name="rad" (click)="scatterPlot('queryTime')">Query Time<br>
+        </form>
+      </div>
     </div>
+
   </div>
   <div id="chart" style="margin:30px 300px;"></div>
