--- a/app/src/app/menu/menu.component.html
+++ b/app/src/app/menu/menu.component.html
@@ -90,7 +90,7 @@
     </div>
 
   <div *ngIf="displaySideMenu" id="sidemenu">
-    <div *ngIf="selectedOptions[1] != 'Average QMpH'" style="margin-top: 40px; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <div style="margin-top: 40px; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
       <label style="color: aliceblue; font-size: medium; margin-left: -30px;">Result Size:</label>
       <ng5-slider class="slider" [(value)]="value" [(highValue)]="highValue" [options]="options" (valueChange)="onChangeSlider()"></ng5-slider>
       <div *ngIf="disPlayScatterPlot" style="margin-top: 40px;">
